--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    start: "npm run compiler-prod && node server.js",
+    start: "npm run compile-prod && node server.js",
     "serve": "npm run compile && npm run watch-css & npm run watch-js",
     "compile": "npm run compile-css & npm run compile-js",
     "compile-css": "sass ./public/src/scss/styles.scss ./public/dist/css/styles.css",
