--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "npm run compile-prod && node server.js",
     "serve": "npm run compile && npm run watch-css & npm run watch-js",
     "compile": "npm run compile-css & npm run compile-js",
+    "compile-prod":"npm run compile-css-prof & npm run compile-js",
     "compile-css": "sass ./public/src/scss/styles.scss ./public/dist/css/styles.css",
     "compile-css-prod": "sass ./public/src/scss/styles.scss ./public/dist/css/styles.css --no-source-map --style=compressed",
     "watch-css": "sass --watch ./public/src/scss/styles.scss ./public/dist/css/styles.css",
