--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
     "start": "npm run compile-prod && node server.js",
-    "serve": "npm run compile && npm run watch-css & npm run watch-js",
+    "serve": "npm run compile && concurrently 'npm:watch-css' 'npm:watch-js'",
     "compile": "npm run compile-css & npm run compile-js",
-    "compile-prod":"npm run compile-css-prod && npm run compile-css && npm run compile-js",
+    "compile-prod": "concurrently 'npm:compile-css-prod' 'npm:compile-js'",
     "compile-css": "sass ./public/src/scss/styles.scss ./public/dist/css/styles.css",
     "compile-css-prod": "sass ./public/src/scss/styles.scss ./public/dist/css/styles.css --no-source-map --style=compressed",
     "watch-css": "sass --watch ./public/src/scss/styles.scss ./public/dist/css/styles.css",
@@ -11,8 +11,9 @@
     "watch-js": "rollup ./public/src/js/scripts.js --file ./public/dist/js/scripts.js --format iife --watch"
   },
   "devDependencies": {
-    "sass": "^1.47.0",
-    "rollup": "^2.63.0"
+    "concurrently": "^7.0.0",
+    "rollup": "^2.63.0",
+    "sass": "^1.47.0"
   },
   "dependencies": {
     "express": "^4.17.2"
